<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MassConvert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:text="@string/massTitle" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_weight="2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewFrom"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:text="@string/massFrom"
            android:gravity="center_vertical"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edFrom"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/massArray"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewTo"
            android:layout_width="59dp"
            android:layout_height="match_parent"
            android:text="@string/massTo"
            android:gravity="center_vertical"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edTo"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/massArray"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>